Bug 1411584 - avoid using memset on a non-trivial type object. r=kip

MozReview-Commit-ID: CW1OChvGoE9

--HG--
extra : rebase_source : 0b13b004433dfa9e704d09871368e63aaebc7e91